--- a/apps/http-backend/package.json
+++ b/apps/http-backend/package.json
@@ -14,14 +14,17 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@types/bcrypt": "^6.0.0",
+    "bcrypt": "^6.0.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "zod": "^4.0.17"
   },
   "devDependencies": {
-    "@repo/common" : "workspace:*",
-    "@repo/typescript-config": "workspace:*",
     "@repo/backend": "workspace:*",
+    "@repo/common": "workspace:*",
+    "@repo/database": "workspace:*",
+    "@repo/typescript-config": "workspace:*",
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10"
   }
