--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "@repo/common",
+  "name": "@repo/database",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "exports": {
-    "./types" : "./src/types.ts"
+  "exports" :{
+    "./client" : "./src/index.ts"
   },
   "devDependencies": {
     "@repo/typescript-config": "workspace:*"
@@ -16,6 +16,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "zod": "^4.0.17"
+    "@prisma/client": "6.14.0",
+    "prisma": "^6.14.0"
   }
 }
