--- a/apps/ws-backend/package.json
+++ b/apps/ws-backend/package.json
@@ -18,6 +18,7 @@
     "ws": "^8.18.3"
   },
   "devDependencies": {
+    "@repo/database": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@repo/backend": "workspace:*",
     "@types/jsonwebtoken": "^9.0.10",
