--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.3",
+    "@tabler/icons": "^3.34.1",
     "@types/axios": "^0.14.4",
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
