--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,10 +13,12 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@tabler/icons": "^3.34.1",
     "@types/axios": "^0.14.4",
+    "@types/js-cookie": "^3.0.6",
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "install": "^0.13.0",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.540.0",
     "next": "15.4.6",
     "react": "19.1.0",
