--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -19,14 +19,18 @@
     "clsx": "^2.1.1",
     "install": "^0.13.0",
     "js-cookie": "^3.0.5",
+    "lenis": "^1.3.9",
     "lucide-react": "^0.540.0",
+    "motion": "^12.23.12",
     "next": "15.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^4.0.17"
   },
   "devDependencies": {
+    "@repo/common": "workspace:*",
     "@repo/config": "workspace:*",
     "@svgr/webpack": "^8.1.0",
     "@types/node": "^20",
